--- a/.poggit.yml
+++ b/.poggit.yml
@@ -1,7 +1,7 @@
 --- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/Vecnavium/VecnaLeaderboards. 
 build-by-default: true
 branches:
-- master
+- SQLITe
 projects:
   VecnaLeaderboards:
     path: ""
